2008-09-08  Chris Marrin  <cmarrin@apple.com>

        Reviewed by Sam Weinig.

        - Animation of -webkit-transform matrix() function should not do linear interpolation
          https://bugs.webkit.org/show_bug.cgi?id=20667

        * animations/matrix-anim-expected.txt: Added.
        * animations/matrix-anim.html: Added.

2008-09-08  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Anders Carlsson.

        - Test for potential bug found while fixing "Cache the code generated for eval to speed up SunSpider and web sites"
        https://bugs.webkit.org/show_bug.cgi?id=20718

        * fast/js/eval-cache-crash-expected.txt: Added.
        * fast/js/eval-cache-crash.html: Added.
        * fast/js/resources/eval-cache-crash.js: Added.

2008-09-07  Adam Barth  <abarth@webkit.org>

        Reviewed by Sam Weinig.

        Tests that opener restriction is working properly.
          https://bugs.webkit.org/show_bug.cgi?id=20642

        * http/tests/security/frameNavigation/not-opener-expected.txt: Added.
        * http/tests/security/frameNavigation/not-opener.html: Added.
        * http/tests/security/frameNavigation/opener-expected.txt: Copied from LayoutTests/fast/dom/Document/early-document-access-expected.txt.
        * http/tests/security/frameNavigation/opener.html: Added.
        * http/tests/security/frameNavigation/resources/not-opener-helper.html: Added.
        * http/tests/security/frameNavigation/resources/pass.html: Added.
        * http/tests/security/frameNavigation/resources/ready.html: Added.

=== End merge of squirrelfish-extreme ===

2008-09-04  Geoffrey Garen  <ggaren@apple.com>

        Checking in some tests that got forgotten in a previous merge.

        * fast/js/pic/cached-deleted-properties-expected.txt: Added.
        * fast/js/pic/cached-deleted-properties.html: Added.
        * fast/js/pic/cached-getter-dictionary-and-proto-expected.txt: Added.
        * fast/js/pic/cached-getter-dictionary-and-proto.html: Added.