@@ -48,11 +48,16 @@ shouldBe("rules1.item(0).cssText", "'0% { left: 10px; }'");
 shouldBe("rules1.item(1).cssText", "'100% { left: 20px; }'");
 
 debug("");
-debug("Insert a new rule");
-keyframes1.insertRule("30% { left: 80px; }");
-shouldBe("rules1.length", "3");
-shouldBe("rules1.item(1).cssText", "'100% { left: 20px; }'");
-shouldBe("rules1.item(2).cssText", "'30% { left: 80px; }'");
+debug("Insert three new rules");
+keyframes1.insertRule("30% { left: 30px; }");
+keyframes1.insertRule("60% { left: 60px; }");
+keyframes1.insertRule("20% { left: 50px; }");
+shouldBe("rules1.length", "5");
+shouldBe("rules1.item(0).cssText", "'0% { left: 10px; }'");
+shouldBe("rules1.item(1).cssText", "'20% { left: 50px; }'");
+shouldBe("rules1.item(2).cssText", "'30% { left: 30px; }'");
+shouldBe("rules1.item(3).cssText", "'60% { left: 60px; }'");
+shouldBe("rules1.item(4).cssText", "'100% { left: 20px; }'");
 
 debug("");
 
