@@ -1,3 +1,13 @@
+2008-09-05  Dean Jackson  <dino@apple.com>
+
+        Reviewed by Dan Bernstein.
+
+        Update grammar so that we can add a keyframe rule via the DOM.
+        https://bugs.webkit.org/show_bug.cgi?id=20613
+
+        * css/CSSGrammar.y:
+        * css/tokenizer.flex:
+
 2008-09-08  Antti Koivisto  <antti@apple.com>
 
         Reviewed by Dan Bernstein.
